the task-header's 'start module' (not 'answer questions') bar should be highlighted when the user hasnt yet answered any questions and is on an interstitial, which is the best way to know if a user is just starting the task
this got broke in 271e64eba2ff356d3b6b21b12df89eb2996541dc when we removed the actual start page

fixes #173

--- a/templates/question.html
+++ b/templates/question.html
@@ -30,7 +30,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
 
 <div class="row">
   <div class="col-sm-push-1 col-sm-9">
-    {% include "task-header.html" with col_width="4" col_active="questions" %}
+    {% include "task-header.html" with col_width="4" col_active=header_col_active %}
 
     {% if source_invitation %}
       <div style="margin-top: 1.5em">
