add debug links to the module, question, task, and answer admin change pages to the bottom of the task finished page, and adding some of that to question pages

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -115,3 +115,7 @@ thead {
 </div> <!-- /row -->
 
 {% endblock %}
+
+{% block scripts %}
+{% include "task-question-debug-links.html" %}
+{% endblock %}
