--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -25,6 +25,24 @@ h1 a:hover span.glyphicon { text-decoration: none; }
   border-top: 2px solid #2556a1;
   color: #1e5281;
 }
+
+
+#question-history-context {
+  margin-top: 1em;
+}
+  #question-history-context ul {
+    list-style-type: none;
+    padding: 0;
+    color: #888;
+  }
+  #question-history-context ul li a {
+    color: inherit;
+  }
+  #question-history-context ul li.this {
+    color: #333;
+  }
+  #question-history-context ul li.other {
+  }
 </style>
 
 <div id="project-name">
