Add dummy export button to project settings page

--- a/templates/project.html
+++ b/templates/project.html
@@ -280,6 +280,13 @@
             </div>
         </div>
 
+      <div class="task-group">
+        <div class="task-group-title">Share Data</div>
+          <div class="row" style="padding:12px;margin:0 0 0 0;">
+              <button class="btn btn-success" onclick="alert('Under development');return false;"><span class="glyphicon glyphicon-share"></span>&nbsp;Export System Description and Control Information</button> 
+          </div>
+        </div>
+
       {% if project.is_deletable %}
       <div class="task-group">
         <div class="task-group-title">Caution!</div>
