Remove bold active tabs

--- a/templates/project.html
+++ b/templates/project.html
@@ -14,7 +14,7 @@
 /* TODO: Move into side-wide stylesheet. The !important is here
    because something on hover is canceling out the border. */
 .nav-tabs>li.active>a {
-  font-weight: bold;
+  font-weight: normal;
   border-top: 3px solid rgb(19,144,50) !important;
 }
 
