--- a/templates/project.html
+++ b/templates/project.html
@@ -44,17 +44,18 @@
 }
 
 .task {
-  border: 1px solid rgb(200,200,200);
-  border-radius: 4px;
-  background-color: rgb(240,240,240);
-  padding: 1em;
-  margin-top: 1em;
-  text-align:center;
+  /*border: 1px solid rgb(200,200,200);
+  border-radius: 4px;*/
+  /*background-color: rgb(240,240,240);*/
+  border-bottom: 1px solid rgb(200,200,200);
+  padding: 4px;
+  margin-top: 0em;
+  text-align:left;
 }
 
   .task .task-title {
     margin-bottom: .25em;
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     color: #666;
   }
