Change 'Ask team' to 'Help', re-style progress links

--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -35,6 +35,7 @@ h4 {font-weight: bold;}
 
 #question-history-context {
   margin-top: 1em;
+  font-size: 0.85em;
 }
   #question-history-context ul {
     list-style-type: none;
@@ -49,6 +50,9 @@ h4 {font-weight: bold;}
   }
   #question-history-context ul li.other {
   }
+.glyphicon.glyphicon-check {
+  color: rgb(30,143,55);
+}
 </style>
 
 <div id="auth-status">
