make tabs responsive by turning them into accordions at xs and sm viewport sizes, but even at larger sizes we may have situations where there are more tabs than can fit and that's still not displaying great, see #67
Run deployment/fetch-vendor-resources.sh after this commit to get the new project dependency.

--- a/templates/base.html
+++ b/templates/base.html
@@ -273,6 +273,7 @@
 
         <script src="{% static "vendor/jquery.js" %}"></script>
         <script src="{% static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
+        <script src="{% static "vendor/bootstrap-responsive-tabs.js" %}"></script>
 
         <script src="{% static "js/main.js" %}"></script>
         <script src="{% static "vendor/bootstrap-helpers.js" %}"></script>
