Style help-block smaller

--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -19,6 +19,9 @@
 .glyphicon.glyphicon-check {
   color: rgb(30,143,55);
 }
+.help-block {
+  font-size: .85em;
+}
 </style>
 
 <div id="auth-status">
