--- a/templates/project.html
+++ b/templates/project.html
@@ -94,13 +94,9 @@ span.glyphicon.glyphicon-check {
   color: rgb(30,143,55);
 }
 
-.task img {
-  position: absolute;
-  left: 50px;
-  top: 30px;
-    opacity: 0.4;
+#project-members {
+	margin-top: 1em;
 }
-
 #project-members .admin {
   font-style: italic;
   font-size: 85%;
@@ -236,12 +232,23 @@ span.glyphicon.glyphicon-check {
 
             {% if project_has_members_besides_me %}
               <div style="margin-bottom: 1em">
-                <!-- <h3 style="margin: 0 0 .5em 0">Members</h3> -->
                 <div id="project-members">
                   {% for pmbr in project_members %}
-                    <div>
-                      {% if pmbr.user == request.user %}<b>{{pmbr.user}}</b>{% else %}{{pmbr.user}}{% endif %}
+                    <div class="clearfix" style="margin-bottom: 4px;">
+                    {% with pmbr.user_details as u %}
+                      <div style="width: 24px; height: 24px; border: 1px solid #AAA; margin-right: .5em; float: left; margin-top: -2px;">
+                      {% if u.picture %}
+                        <img src="{{u.picture.url}}" alt="{{u.name}} Profile Picture"
+                          style="display:block; width: 100%; height: 100%;">
+                      {% endif %}
+                      </div>
+
+                      <span {% if u.name != pmbr.user.email %}title="{{pmbr.user.email}}"{% endif %}>
+                        {{u.name}}
+                      </span>
+                      {% if pmbr.user == request.user %}<span class="you">you</span>{% endif %}
                       {% if pmbr.is_admin %}<span class="admin">admin</span>{% endif %}
+                    {% endwith %}
                     </div>
                   {% endfor %}
                 </div>
