remove Bootstrap's .btn { white-space: nowrap; } because it makes buttons non-responsive
I wonder why they added that CSS.

fixes #190

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
             .glyphicon-book { color: #888; }
             .glyphicon-globe { color: #888; }
             .glyphicon-plus { color: #FFF; }
+            .btn { white-space: normal; }
         </style>
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
         <link rel="stylesheet" href="{% static "vendor/fontawesome/css/font-awesome.min.css" %}">
