--- a/templates/base.html
+++ b/templates/base.html
@@ -275,6 +275,7 @@
         <script src="{% static "vendor/jquery.js" %}"></script>
         <script src="{% static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
         <script src="{% static "vendor/bootstrap-responsive-tabs.js" %}"></script>
+        <script src="{% static "vendor/autosize.min.js" %}"> </script>
 
         <script src="{% static "js/main.js" %}"></script>
         <script src="{% static "vendor/bootstrap-helpers.js" %}"></script>
