mailgun incoming mail route to reply to discussion comments
This is configured at Mailgun with:

  recipient: q\+notification.*@mg.govready.com

  action: https://q.govready.com/notification_reply_email_hook

--- a/templates/email/template.html
+++ b/templates/email/template.html
@@ -25,4 +25,9 @@ a {
 
 <p>GovReady <b>Q</b></p>
 
+<div style="margin-top: 1em; font-size: 85%; color: #555">
+{% block after_signature_note %}
+{% endblock %}
+</div>
+
 {% endblock %}
