invite users to join a project when creating a project, fixes #203

--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -23,7 +23,7 @@ Add System
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
-      <button type="submit" class="btn btn-primary">Add &raquo;</button>
+      <button type="submit" class="btn btn-primary">Create System &raquo;</button>
     {% endbuttons %}
 </form>
 
